tests/test_func/bad/output/bad_func.catala_en.S.Interpret
[ERROR] There is a conflict between multiple validd consequences for assigning the same variable.

This consequence has a valid justification:
  --> tests/test_func/bad/bad_func.catala_en
   | 
15 |   definition f of x under condition not b consequence equals x * x
   |                                                              ^^^^^
   + Article

This consequence has a valid justification:
  --> tests/test_func/bad/bad_func.catala_en
   | 
14 |   definition f of x under condition (x >= x) consequence equals x + x
   |                                                                 ^^^^^
   + Article
